testdata/baselines/reference/compiler/overloadErrorElaborationMultiDiag.errors.txt
overloadErrorElaborationMultiDiag.ts(9,13): error TS2769: No overload matches this call.
  Overload 1 of 2, '(x: string, y: string): string', gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(x: number, y: number): number', gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'number'.


==== overloadErrorElaborationMultiDiag.ts (1 errors) ====
    // Two overloads with multiple diagnostics per candidate (maxDiagCount > 1)
    // This should select only the candidate with fewest diagnostics
    function baz(x: string, y: string): string;
    function baz(x: number, y: number): number;
    function baz(x: any, y: any): any {
        return x;
    }
    
    var z = baz(true, true);
                ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(x: string, y: string): string', gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(x: number, y: number): number', gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'number'.
!!! related TS2793 overloadErrorElaborationMultiDiag.ts:5:10: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.
    